# rust-barcode-detector

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/basic/: http.rs  mod.rs
src/service/: barcode.rs  dto.rs  image.rs  mod.rs
