[package]
name = "barcode-detector"
version = "1.0.0"
edition = "2021"
build = "build.rs"


[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["blocking", "json", "gzip", "rustls-tls"] }
base64 = "0.22.1"
image = "0.25.2"
opencv = "0.93.1"
